Show Twitter link instead of irc.
We don’t use irc anymore. Twitter account link is more meaningful.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,8 +17,8 @@
             <% end %>
           </div>
           <div class="lg-6-1">
-            <%= link_to page_path("irc") do %>
-              <%= fa_icon "hashtag", text: "IRC" %>
+            <%= link_to "https://twitter.com/ruby_turkiye", target: "_blank" do %>
+              <%= fa_icon "twitter", text: "Twitter" %>
             <% end %>
           </div>
           <div class="lg-6-1">
