Add Twitter to news.

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -2,6 +2,12 @@
   <div class="row gutter-20-xs gutter-out-xs left-xs">
     <div class="xl-12-8 lg-12-7">
       <div class="news">
+        <h2>Twitter hesabı hakkında</h2>
+        <p>
+          Topluluğumuzun Twitter hesabına üstteki linklerden ulaşabilirsiniz. Ruby ve topluluk hakkındaki en son gelişmeleri oradan takip edebilir, sorularınızı sorabilirsiniz.
+        </p>
+      </div>
+      <div class="news">
         <h2>Firmalar dizini açılmıştır</h2>
         <p>
           Ruby, Ruby on Rails gibi teknolojileri kullanan firmaları derlediğimiz bir dizin oluşturduk. Sizde dizine girerek firmanızı <%= link_to "ekleyebilir", new_company_path %> veya diğer <%= link_to "firmalara", companies_path %> göz atabilirsiniz.
@@ -10,7 +16,7 @@
       <div class="news">
         <h2>Slack kanalımız hakkında</h2>
         <p>
-          Topluluğumuz Slack kanalına (#rubytr) artık sitemiz üzerinden ulaşabilirsiniz. Üstteki linklerden Slack kanalımıza kolayca erişebilirsiniz.
+          Topluluğumuz Slack kanalına artık sitemiz üzerinden ulaşabilirsiniz. Üstteki linklerden Slack kanalımıza kolayca erişebilirsiniz.
         </p>
       </div>
       <div class="news">
@@ -41,14 +47,14 @@
 
         <h3>Nasıl iletişim kurabilirim ?</h3>
         <ul class="connect-links">
-          <li><%= link_to "#ruby-tr (IRC/freenode)", page_path("irc") %></li>
+          <li><%= link_to "Twitter", "https://twitter.com/ruby_turkiye" %></li>
           <li><%= link_to "Mail Grubu", page_path("group") %></li>
           <li><%= link_to "Slack Kanalı", "https://rubytr.slack.com" %></li>
         </ul>
 
         <h3>Nasıl yardım alabilirim ?</h3>
         <p>
-          IRC kanalımızda veya mail listemizde sorularınızı paylaşabilirsiniz.
+          Slack kanalımızda veya mail listemizde sorularınızı paylaşabilirsiniz.
         </p>
 
         <a class="btn btn-green" href="https://groups.google.com/forum/#!forum/ruby-tr"><i class="fa fa-envelope"></i> Mail Listemize Kaydolun!</a>
