adding announcement model and setting it up...

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
             <% end %>
           </div>
           <div class="lg-6-1">
-            <%= link_to page_path("group") do %>
+            <%= link_to "/group" do %>
               <%= fa_icon "envelope", text: "Mail Grubu" %>
             <% end %>
           </div>
