--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -4,7 +4,7 @@
       <% @announcements.each do |announcement| %>
       <article class="news">
         <h2><%= announcement.title %></h2>
-        <p><%= announcement.content %></p>
+        <p><%= Kramdown::Document.new(announcement.content).to_html.html_safe %></p>
       </article>
       <% end %>
     </div>
