--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,6 +84,11 @@
     border-radius: 3px;
     line-height: 32px;
   }
+  .nav a.truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
   .nav a:hover, .nav a.active{
     color: #fff;
     background: #CA3633;
