--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,35 +4,26 @@
       <div class="lg-12-4">
         <h1><a href="/"><%= image_tag "ruby-logo@2x.png" %>Ruby <span>Türkiye</span></a></h1>
       </div>
-      <div class="lg-12-8">
-        <div class="row gutter-10-xs nav">
-          <div class="lg-6-1">
+      <div class="lg-12-2"></div>
+      <div class="lg-12-6">
+        <div id="top-navbar-right" class="row gutter-10-xs nav">
+          <div class="lg-3-1">
             <%= link_to users_path do %>
               <%= fa_icon "users", text: "Topluluk" %>
             <% end %>
           </div>
-          <div class="lg-6-1">
+          <div class="lg-3-1">
             <%= link_to "/group" do %>
               <%= fa_icon "envelope", text: "Mail Grubu" %>
             <% end %>
           </div>
-          <div class="lg-6-1">
-            <%= link_to "https://twitter.com/ruby_turkiye", target: "_blank" do %>
-              <%= fa_icon "twitter", text: "Twitter" %>
-            <% end %>
-          </div>
-          <div class="lg-6-1">
-            <%= link_to "https://rubytr.herokuapp.com/", target: "_blank" do %>
-              <%= fa_icon "slack", text: "Slack" %>
-            <% end %>
-          </div>
-          <div class="lg-6-1">
+          <div class="lg-3-1">
             <%= link_to companies_path do %>
               <%= fa_icon "building", text: "Firmalar" %>
             <% end %>
           </div>
           <% if current_user %>
-            <div class="lg-6-1">
+            <div class="lg-4-1">
               <%= link_to edit_user_registration_path, class: 'user-name truncate' do %>
                 <%= fa_icon "user", text: current_user.name %>
               <% end %>
