Footer'da bulunan sosyal medya hesaplarının son elemanının gereksiz padding-right'ı kaldırıldı

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -223,6 +223,10 @@ textarea {
     font-weight: normal;
   }
 
+  footer .text-right a:last-child {
+    padding-right: 0;
+  }
+
   footer .text-right a:focus {
     text-decoration: none;
   }
