_header.html.erb file remove all top navbar right grid class

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,22 +6,22 @@
       </div>
       <div class="lg-12-8">
         <div id="top-navbar-right" class="row gutter-10-xs nav">
-          <div class="lg-4-1">
+          <div>
             <%= link_to users_path do %>
               <%= fa_icon "users", text: "Topluluk" %>
             <% end %>
           </div>
-          <div class="lg-4-1">
+          <div>
             <%= link_to "/group" do %>
               <%= fa_icon "envelope", text: "Mail Grubu" %>
             <% end %>
           </div>
-          <div class="lg-4-1">
+          <div>
             <%= link_to companies_path do %>
               <%= fa_icon "building", text: "Firmalar" %>
             <% end %>
           </div>
-          <div class="lg-4-1">
+          <div>
           <%= link_to "https://rubytr.herokuapp.com/", target: "_blank" do %>
             <%= fa_icon "slack", text: "Slack" %>
           <% end %>
