--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,16 @@
     padding: 0 20px;
     margin-bottom: 20px;
   }
+  .events {
+    text-align: left;
+    border: 1px solid #e8e8e8;
+    border-radius: 3px;
+    background: #f5f5f5;
+    display: block;
+    overflow: hidden;
+    padding: 0 20px;
+    margin-bottom: 20px;
+  }
   .news:last-child{
     margin-bottom: 0;
   }
