Anasayfa da sağ bara ajax ile yaklaşan etkinlik var ise getiren bir widget eklendi

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -15,6 +15,11 @@
           Türkiye'deki Ruby programcıları ve Ruby severler topluluğudur. Ruby ile program yazan ve ilgilenen herkese kapımız açıktır.
         </p>
 
+        <div id="events">
+          <h3>Yaklaşan etkinlik var!</h3>
+          <ul></ul>
+        </div>
+
         <h3>Nasıl iletişim kurabilirim ?</h3>
         <ul class="connect-links">
           <li><%= link_to "Twitter", "https://twitter.com/ruby_turkiye" %></li>
