--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,9 @@
     padding: 0 20px;
     margin-bottom: 20px;
   }
+  aside #events {
+    display: none;
+  }
   .events {
     text-align: left;
     border: 1px solid #e8e8e8;
