Fix Meetup link.

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
         <%= link_to "https://twitter.com/ruby_turkiye", target: "_blank" do %>
           <%= fa_icon "twitter", text: "Twitter" %>
         <% end %>
-        <%= link_to 'https://www.meetup.com/preview/Ruby-Turkiye', target: '_blank' do %>
+        <%= link_to 'https://www.meetup.com/Ruby-Turkiye/', target: '_blank' do %>
           <%= fa_icon 'meetup', text: 'Meetup' %>
         <% end %>
         <%= link_to 'https://www.facebook.com/rubyturkiye', target: '_blank' do %>
