Disable weekly newsletter

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -25,7 +25,7 @@
           <li><%= link_to "Twitter", "https://twitter.com/ruby_turkiye" %></li>
           <li><%= link_to "Mail Grubu", "/group" %></li>
           <li><%= link_to "Slack Kanalı", "https://rubytr.slack.com" %></li>
-          <li><%= link_to "Haftalık Bülten", "https://bulten.rubyturkiye.org" %></li>
+          <li><strike><%= link_to "Haftalık Bülten", "https://www.getrevue.co/profile/ruby_turkiye" %></strike></li>
         </ul>
 
         <h3>Nasıl yardım alabilirim ?</h3>
