--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -360,3 +360,48 @@ textarea {
     @media (max-width: 320px) {
 
     }
+
+.github-ribbon {
+  position: fixed;
+  display: block;
+  top: 0;
+  right: 0;
+  width: auto;
+  height: auto;
+  z-index: 10;
+  & > a {
+    position: absolute;
+    top: 40px;
+    right: -50px;
+    width: 220px;
+    background-color: #950d07;
+    padding: 5px 40px;
+    font-size: 1rem;
+    line-height: 2rem;
+    box-sizing: border-box;
+    white-space: nowrap;
+    color: #fff;
+    text-align: center;
+    transform: rotate(45deg);
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.8);
+    &:hover,
+    &:focus {
+      color: darken(#fff, 10%)
+    }
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      top: 1px;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 1px;
+      background-color: #fff;
+    }
+    &::after{
+      top: auto;
+      bottom: 1px;
+    }
+  }
+}
