--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -37,4 +37,9 @@
       </div>
     </div>
   </div>
+  <div class="github-ribbon">
+    <a href="https://github.com/rubytr/ruby-tr" target="_blank">
+      Fork me on Github
+    </a>
+  </div>
 </header>
