Move github-ribbon code to a new partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 </head>
 <body>
   <%= render 'shared/header' %>
+  <%= render 'shared/github_ribbon' %>
   <%= yield %>
   <%= render 'shared/footer' %>
 </body>
