add pagination for users.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,6 +19,7 @@
       <div class="row gutter-10-xs center-lg">
         <%= render @users %>
       </div>
+      <%= paginate @users %>
     </div>
   </div>
 </div>
