Changed Github link to community profile.

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,7 +12,7 @@
         <%= link_to 'https://www.facebook.com/rubyturkiye', target: '_blank' do %>
           <%= fa_icon 'facebook', text: 'Facebook' %>
         <% end %>
-        <%= link_to "https://github.com/rubytr/ruby-tr", target: "_blank" do %>
+        <%= link_to "https://github.com/rubytr", target: "_blank" do %>
           <%= fa_icon "github", text: "Github" %>
         <% end %>
         <%= link_to "https://kommunity.com/ruby-turkiye", target: "_blank" do %>
