--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -25,6 +25,7 @@
           <li><%= link_to "Twitter", "https://twitter.com/ruby_turkiye" %></li>
           <li><%= link_to "Mail Grubu", "/group" %></li>
           <li><%= link_to "Slack Kanalı", "https://rubytr.slack.com" %></li>
+          <li><%= link_to "Discourse", "https://discuss.rubyturkiye.org/" %></li>
           <li><%= link_to "Yakut - Haftalık Video Bülten", "https://www.youtube.com/playlist?list=PLEWqXxI7lAZIHZ4s3fcuy1UmF_YiQkZpi" %></li>
         </ul>
 
