Show flash message after sign in with github

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,7 @@
     <div class="xs-1">
       <div class="page-header">
         <h2>Profilini Düzenle</h2>
+        <%= render "shared/notice" %>
         <%= link_to destroy_user_session_path, method: :delete, class: "btn btn-github" do %>
           <i class="fa fa-github"></i> Çıkış Yap
         <% end %>
