--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -3,9 +3,7 @@
     <div class="xs-1 left-lg">
       <div class="page-header">
         <h2>Firmalar</h2>
-        <% if flash[:notice] %>
-          <div class="notice"><%= flash[:notice] %></div>
-        <% end %>
+        <%= render "shared/notice" %>
       </div>
     </div>
   </div>
