Fix total users number in the users index page (#191)
* Fix total users number in the users index page

* use 'total_count' function in the view

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row gutter-20-xs gutter-out-xs center-lg">
     <div class="xs-1 left-lg">
       <div class="page-header">
-        <h2>Topluluk (<%= @users.length %>)</h2>
+        <h2>Topluluk (<%= @users.total_count %>)</h2>
       </div>
     </div>
     <div class="lg-12-3">
