--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import "normalize";
 @import "flexiblegs.min";
 @import "animate.min";
-@import "font-awesome";
+@import "font_awesome5_webfont";
 @import "config";
 @import "bootstrap-sprockets";
 @import "bootstrap";
