--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,12 +18,12 @@
           </div>
           <div>
           <%= link_to "https://slack.rubyturkiye.org/", target: "_blank" do %>
-            <%= fa_icon "slack", text: "Slack" %>
+            <%= fab_icon "slack-hash", text: "Slack" %>
           <% end %>
           </div>
           <div>
             <%= link_to "https://discuss.rubyturkiye.org/", target: "_blank" do %>
-              <%= fa_icon "discourse", text: "Discourse" %>
+              <%= fab_icon "discourse", text: "Discourse" %>
             <% end %>
           </div>
           <% if current_user %>
