--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,16 +4,16 @@
       <div class="lg-2-1">&copy; <%= Time.now.year %> - Ruby Türkiye</div>
       <div class="lg-2-1 text-right">
         <%= link_to "https://twitter.com/ruby_turkiye", target: "_blank" do %>
-          <%= fa_icon "twitter", text: "Twitter" %>
+          <%= fab_icon "twitter", text: "Twitter" %>
         <% end %>
         <%= link_to 'https://www.meetup.com/Ruby-Turkiye/', target: '_blank' do %>
-          <%= fa_icon 'meetup', text: 'Meetup' %>
+          <%= fab_icon 'meetup', text: 'Meetup' %>
         <% end %>
         <%= link_to 'https://www.facebook.com/rubyturkiye', target: '_blank' do %>
-          <%= fa_icon 'facebook', text: 'Facebook' %>
+          <%= fab_icon 'facebook', text: 'Facebook' %>
         <% end %>
         <%= link_to "https://github.com/rubytr", target: "_blank" do %>
-          <%= fa_icon "github", text: "Github" %>
+          <%= fab_icon "github", text: "Github" %>
         <% end %>
         <%= link_to "https://kommunity.com/ruby-turkiye", target: "_blank" do %>
           <%= fa_icon "users", text: "Kommunity" %>
