--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
     <div class="lg-12-3">
       <% unless current_user %>
         <%= link_to user_github_omniauth_authorize_path, class: "btn btn-github" do %>
-          <i class="fa fa-github"></i> Github ile Giriş Yap
+          <i class="fab fa-github"></i> Github ile Giriş Yap
         <% end %>
       <% end %>
       <br/>
