github omniauth link method changed to post

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="lg-12-3">
       <% unless current_user %>
-        <%= link_to user_github_omniauth_authorize_path, class: "btn btn-github" do %>
+        <%= link_to user_github_omniauth_authorize_path, method: :post, class: "btn btn-github" do %>
           <i class="fab fa-github"></i> Github ile Giriş Yap
         <% end %>
       <% end %>
