--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -29,7 +29,7 @@
           <% if current_user %>
             <div class="lg-5-1">
               <%= link_to edit_user_registration_path, class: 'user-name truncate' do %>
-                <%= fa_icon "user", text: current_user.name %>
+                <%= fa_icon "user", text: current_user.name.truncate(10) %>
               <% end %>
             </div>
           <% end %>
