Fix footer grid

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="animated fadeIn">
   <div class="container">
     <div class="row gutter-20-xs gutter-out-xs left-lg">
-      <div class="lg-2-1">&copy; <%= Time.now.year %> - Ruby Türkiye</div>
-      <div class="lg-2-1 text-right">
+      <div class="col-sm-4">&copy; <%= Time.now.year %> - Ruby Türkiye</div>
+      <div class="col-sm-8 text-right">
         <%= link_to "https://twitter.com/ruby_turkiye", target: "_blank" do %>
           <%= fab_icon "twitter", text: "Twitter" %>
         <% end %>
