Add Youtube channel

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,8 +6,8 @@
         <%= link_to "https://twitter.com/ruby_turkiye", target: "_blank" do %>
           <%= fab_icon "twitter", text: "Twitter" %>
         <% end %>
-        <%= link_to 'https://www.meetup.com/Ruby-Turkiye/', target: '_blank' do %>
-          <%= fab_icon 'meetup', text: 'Meetup' %>
+        <%= link_to 'https://www.youtube.com/@rubyturkiyeorg/', target: '_blank' do %>
+          <%= fab_icon 'youtube', text: 'Youtube' %>
         <% end %>
         <%= link_to 'https://www.facebook.com/rubyturkiye', target: '_blank' do %>
           <%= fab_icon 'facebook', text: 'Facebook' %>
