Use Discord instead Slack

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -23,17 +23,15 @@
         <h3>Nasıl iletişim kurabilirim ?</h3>
         <ul class="connect-links">
           <li><%= link_to "Twitter", "https://twitter.com/ruby_turkiye" %></li>
-          <li><%= link_to "Slack Kanalı", "https://rubytr.slack.com" %></li>
+          <li><%= link_to "Discord", "https://discord.gg/HMr5nQcFy4" %></li>
           <li><%= link_to "Discourse", "https://discuss.rubyturkiye.org/" %></li>
           <li><%= link_to "Yakut - Haftalık Video Bülten", "https://www.youtube.com/playlist?list=PLEWqXxI7lAZIHZ4s3fcuy1UmF_YiQkZpi" %></li>
         </ul>
 
         <h3>Nasıl yardım alabilirim ?</h3>
         <p>
-          Slack kanalımızda veya mail listemizde sorularınızı paylaşabilirsiniz.
+          Discord kanalımızda veya Discourse forumumuzda sorularınızı paylaşabilirsiniz.
         </p>
-
-        <a class="btn btn-green" href="https://groups.google.com/forum/#!forum/ruby-tr"><i class="fa fa-envelope"></i> Mail Listemize Kaydolun!</a>
       </aside>
     </div>
   </div>
