--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,8 +17,8 @@
             <% end %>
           </div>
           <div>
-          <%= link_to "https://slack.rubyturkiye.org/", target: "_blank" do %>
-            <%= fab_icon "slack-hash", text: "Slack" %>
+          <%= link_to "https://discord.gg/HMr5nQcFy4", target: "_blank" do %>
+            <%= fab_icon "discord", text: "Discord" %>
           <% end %>
           </div>
           <div>
