Add community partner logo
We support Friendly.rb. We had to add Friendlyrb logo but I forgot :D They asked yestedary since they didn't see Friendlyrb logo in our website.

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -35,6 +35,12 @@
 
         <a class="btn btn-green" href="https://groups.google.com/forum/#!forum/ruby-tr"><i class="fa fa-envelope"></i> Mail Listemize Kaydolun!</a>
       </aside>
+      <aside style="margin-top: 10px">
+        <h3>Topluluk Destekçileri</h3>
+        <%= link_to "https://friendlyrb.com", target: "_blank", rel: "nofollow" do %>
+          <%= image_tag "image.png", width: 200 %>
+        <% end %>
+      </aside>
     </div>
   </div>
 </div>
